@@ -1,3 +1,6 @@
+build_20091022_0930 lemmerich
+	* For Hudson's sake deleted class TimeStringInterpreter
+
 build_20091021_1000 lemmerich
 	* try to explain maven, what "Exclude from build path" means 
 		on the example of class TimeStringInterpreter
